kubernetes_task_2_updated/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kubernetestask-ingress
spec:
  rules:
  - host: sa.homework
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend-service
          servicePort: 3000
  - host: api.sa.homework
    http:
      paths:
      - path: /
        backend:
          serviceName: backend-service
          servicePort: 8000
